# cpp-raytracer

./: .gitignore  CMakeLists.txt  README.md
include/cpp-raytracer/: common.h  hittable.h  ray.h  sphere.h  vec3.h
include/cpp-raytracer/hittable/: mesh.h
scripts/: build_and_run.sh
src/: main.cc
src/hittable/: mesh.cc
